# JCBTransient

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
Assets/FactoryPresets/: Drums_Kick_Body.preset  Drums_Kick_Short.preset  Drums_Snare.preset  General_Ataquer.preset  Guitars_Guitar.preset  LoopRedux.preset  Sustainer.preset
Assets/code/: Detector+GainCalc.txt  Detector.txt  Filters.txt  GainCalc.txt  GainCore.txt  GenExpr(latencia0)-mejoradoSafe.txt  GenExpr(latencia0).txt  GenExpr.txt  GenExprOK.txt  GenExprOKOK.txt  GenExprOKOKOK.txt  InputTrim.txt  Output.txt
Max/: JCBExpansor.maxpat  JCBTransient(latencia0)-mejoradoSafe.maxpat  JCBTransient(latencia0).maxpat  JCBTransient.maxpat  JCBTransient300725.maxpat
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/UI/: CustomComboBox.cpp  CustomComboBox.h  CustomSlider.h  CustomTooltip.h  GradientMeter.h  TransferFunctionDisplay.cpp  TransferFunctionDisplay.h  TrimSlider.h
Source/Components/Windows/: CodeWindow.cpp  CodeWindow.h  CreditsWindow.cpp  CreditsWindow.h  CustomDialog.h  DarkThemeColors.h  UndoableButtonAttachment.h  UndoableMultiStateButtonAttachment.h
Source/Helpers/: MovingAverage4800.h  ParameterChangeAction.h  UTF8Helper.h  UndoableParameterHelper.h
cmake/: Pluginval.cmake
exported-code/: JCBExpander.cpp  JCBExpander.h  JCBTransient.cpp  JCBTransient.h
exported-code/gen_dsp/: genlib_ops.h
